Fix layout issues for larger screens 1400px+

--- a/style/index.css
+++ b/style/index.css
@@ -112,21 +112,21 @@ nav, a:hover {
 }
 
 .headShot {
-	width: 50%;
+	width: 80%;
 	margin-right: 2%;
 	margin-top: 2%;
 }
 
 .flexText {
-	width: 60%;
-	font-size: 20px;
+	width: 80%;
+	font-size: 2.5rem;
 	font-family: 'Space Grotesk', sans-serif;
 	font-weight: 300;
 }
 
 .flexText p {
-	line-height: 32px;
-	margin-bottom: 16px;
+	line-height: 1.5;
+	margin: 4% 0;
 }
 
 h2{
@@ -139,11 +139,12 @@ h2{
 
 .gallery {
 	background-color: white;
+	width: 100%;
 }
 
 .galleryItem {
-	width: 30%;
-	padding: 32px;
+	width: 100%;
+	padding: 12% 8% 4% 8%;
 }
 
 .row1 {
@@ -178,25 +179,26 @@ footer {
 
 footer p {
 	font-family: 'Space Grotesk', sans-serif;
-	font-size: 24px;
+	font-size: 2rem;
 	font-weight: 300;
-	margin-bottom: 24px;
+	margin-bottom: 2%;
+	text-align: center;
 }
 
 footer p:nth-child(1){
 	font-family: 'Spectral', serif;
-	font-size: 48
-	px;
+	font-size: 3.8rem;
 	text-align: center;
 }
 
 
 button {
-	padding: 14px 24px;
+	width: 40%;
+	padding: 2% 6%;
 	background: white;
 	border-radius: 8px;
 	font-family: 'Spectral', serif;
-	font-size: 18px;
+	font-size: 1.8rem;
 	color: #616161;
 	border-color: white;
 	transition: background-color 0.3s ease-in-out;
@@ -208,23 +210,68 @@ button:hover {
 }
 
 
-.socialLinks {
-	display: flex;
-	justify-content: space-around;
-	padding: 8px 8px;
-}
-
-.fa-twitter {
-	color: white;
-	padding-right: 0px;
-}
-
-.fa-linkedin {
-	color: white;
-	padding-right: 24px;
-}
-
 /* Media queries */
+
+@media (max-width: 1366px) {
+	.about {
+		margin: 4% 0;
+		padding: 4% 0;
+	}
+
+	.headShot {
+		width: 80%;
+	}
+
+	.flexText {
+		width: 100%;
+	}
+
+	h2 {
+		font-size: 4rem;
+	}
+
+	.gallery {
+		width: 100%;
+		justify-content: center;
+	}
+
+	.galleryItem {
+		width: 100%;
+		padding: 12% 8% 4% 8%;
+	}
+
+	.row1, .row2 {
+		padding: 0 8%;
+	}
+
+	footer p:nth-child(1){
+		font-size: 2.8rem;
+		line-height: 1.2;
+		width: 80%;
+		margin-bottom: 4%;
+		text-align: center;
+	}
+
+	footer p {
+		font-size: 2.4rem;
+		margin-bottom: 8%;
+		width: 85%;
+		text-align: center;
+	}
+
+	button {
+		width: 65%;
+		padding: 2% 6%;
+		border-radius: 8px;
+		font-size: 1.8rem;
+	}
+
+	.socialLinks {
+		display: none;
+	}
+	
+}
+
 
 @media (max-width: 800px) {
 	.logoHeader {
@@ -264,49 +311,6 @@ button:hover {
 	h2 {
 		font-size: 4rem;
 	}
-
-	.gallery {
-		width: 100%;
-		justify-content: center;
-	}
-
-	.galleryItem {
-		width: 100%;
-		padding: 12% 8% 4% 8%;
-	}
-
-	.row1, .row2 {
-		padding: 0 8%;
-	}
-
-	footer p:nth-child(1){
-		font-size: 2.8rem;
-		line-height: 1.2;
-		width: 80%;
-		margin-bottom: 4%;
-		text-align: center;
-	}
-
-	footer p {
-		font-size: 2.4rem;
-		margin-bottom: 8%;
-		width: 85%;
-		text-align: center;
-	}
-
-	button {
-		width: 80%;
-		padding: 2% 6%;
-		border-radius: 8px;
-		font-size: 1.8rem;
-	}
-
-	.socialLinks {
-		display: none;
-	}
-	
-
-
 
 }
 
